Fix spacing between name and link-circle

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -54,10 +54,11 @@ html, body {
   display: flex;
   list-style: none;
   align-items: center;
-  justify-content: center;
-  margin: 0;
+  justify-content: space-between;
+  margin: 0 2%;
   padding: 0;
 }
+
 
 #nav-image{
   padding-top: .205%;
